# calculator

./: .editorconfig  .gitignore  MANIFEST.in  README.md  codecov.yaml  codecov.yml  pyproject.toml  pytest.ini  setup.cfg  shell.nix
.github/workflows/: backend-ci.yaml  ci.yaml  frontend-ci.yaml
client/: .eslintrc.json  index.html  package-lock.json  package.json
client/static/css/: calculator.css
client/static/js/: CalculatorController.js  CalculatorView.js  calculator.js
client/static/js/test/: calculator.test.js
src/: app.py
src/api/: calculator.py
src/calculator/: calculator.py
tests/calculator/: test_calculator.py
