[metadata]
name = calculator
version = 0.0.1
author = Gabriel Celis
author_email = randomemail32110@gmail.com
description = A simple calculator web app
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/flyingsl0ths/calculator
project_urls =
  Bug Tracker = https://github.com/flyingsl0ths/calculator/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
  Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.10
install_requires =
    Flask == 2.1.3
    pytest-cov == 3.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
  pytest >= 6.2.5 
  mypy >= 0.941
  black >= 22.3.0

